name:           dynmus
version:        0.1
synopsis:       real-time dynamic music
description:    currently looking at hexachord voicings
license:        BSD3
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
cabal-version:  >= 1.8
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/dancor/dynmus

flag dynmus
  default: False

executable dynmus
  if !flag(dynmus)
      buildable: False
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -Wall -O2 -threaded
  c-sources:        src/cbits/lol.c
  extra-libraries:  portaudio
  build-depends:
      base
    , containers
    , haskore
    , MissingH
    , mtl
    , netwire
    , process
    , random
    , soundfont
    , split
    , time
    -- , tomato-rubato-openal
    , vector
    , WAVE

flag list-chords
  default: False

executable list-chords
  if !flag(list-chords)
      buildable: False
  hs-source-dirs:   src
  main-is:          Main/list-chords.hs
  ghc-options:      -Wall -O3
  build-depends:
      base
    , containers
    , haskore
    , safe
    , vector

flag tran-table
  default: False

executable tran-table
  if !flag(tran-table)
      buildable: False
  hs-source-dirs:   src
  main-is:          Main/tran-table.hs
  ghc-options:      -Wall -O3
  build-depends:
      base
    , containers
    , haskore
    , safe
    , text
    , vector

test-suite test
  hs-source-dirs:   src
  main-is:          Tests.hs
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , containers
    , haskore
    , process
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , vector
