name:                dynmus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dynmus#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel P Corson <danl@alum.mit.edu>
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/dancor/dynmus

executable tran-table
  hs-source-dirs: src
  main-is:        Main/tran-table.hs
  ghc-options:    -Wall -O3
  build-depends:
      base
    , containers
    , Euterpea
    , safe
    , text
    , vector
  default-language:    Haskell2010

executable nice-tran
  hs-source-dirs: src
  main-is:        Main/nice-tran.hs
  ghc-options:    -Wall -O3
  build-depends:
      base
    , Euterpea
    , MonadRandom
  default-language:    Haskell2010
